--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
 1.0.0 Initial version
 1.0.1 -> 1.0.3 major changes that are incorrectly versioned.
 1.0.4 Reverting changes from 1.0.1 -> 1.0.3
+1.0.5 Fix for base64 encoded PrintJobs - now correctly encodes the printjob.
